classDiagram
    User <-- Element
    User <|-- Guest
    User <|-- Event
    Event <|-- Element
    Event <|-- Guest

    class User{
        id: Int
        email: String
        username: String
        name: String?
        password: String
        defaultPic: Boolean
        events: Event[]
        guests: Guest[]
        comments: Comment[]
        elements: Element[]
        reviews: Review[]
    }
    class Event{
        id: Int
        name: String
        description: String
        creatorId: Int
        coordinates: Float[]
        confirmationDeadline: DateTime
        guests: Guest[]
        comments: Comment[]
        elements: Element[]
        reviews: Review[]
        date: DateTime
    }
    class Guest{
        id: Int
        userId: Int
        eventId: Int
        confirmationStatus: confirmationStatus
        isHost: Boolean
    }
    class Element {
        id       Int
        name     String
        quantity Int
        eventId  Int
        maxUsers Int
        users    User[]
    }